# trilha-python-dio

02 - Programação Orientada a Objetos/10 - desafio/: desafio_v2.py
13 - APIs Assíncronas com FastAPI/dio-blog-meu/: main.py  pyproject.toml
13 - APIs Assíncronas com FastAPI/dio-blog-meu/controllers/: post.py
13 - APIs Assíncronas com FastAPI/dio-blog-meu/schemas/: post.py
13 - APIs Assíncronas com FastAPI/dio-blog-meu/views/: post.py
migrations/: env.py
migrations/versions/: 09f7da264602_add_initial_tables.py
src/: config.py  database.py  main.py  security.py
src/models/: account.py
src/schemas/: account.py
src/services/: account.py
src/views/: account.py
