[project]
name = "dio-blog-meu"
version = "0.1.0"
description = ""
authors = [
    {name = "MHENRIQUE89",email = "marcos.mhs.777@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
